# HotelManagementSystemBackend

./: .env  .travis.yml  .travis_script.sh  Cargo.toml  Justfile  LICENSE  README.md  api_draft.txt
migrations/.sqls/debug/: up.sql
migrations/.sqls/release/: down.sql  up.sql
migrations/20161108082436_create_db/: up.sql
migrations/zdata/: up.sql
populate/: Cargo.toml
populate/src/: authorize.rs  main.rs  response.rs  schema.rs
src/: authorization.rs  error.rs  main.rs  response.rs  schema.rs
src/api/: account.rs  authorization.rs  booking.rs  city.rs  hotel.rs  macros.rs  manager.rs  mod.rs  ruleset.rs  search.rs
src/api/tests/: account.rs  authorization.rs  city.rs  hotel.rs  mod.rs
src/db/: macros.rs  mod.rs  pool.rs  schema.rs  schemaext.rs
src/db/builder/: delete.rs  insert.rs  macros.rs  mod.rs  select.rs  update.rs
src/proto/: error.rs  macros.rs  mod.rs  response.rs  schema.rs
